--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,15 +7,27 @@
 }
 
 html {
-  //** This defines what 1rem is
-  font-size: 62.5%; //** it's 10px divided by 16px (which is the default font size) */
+  //* This defines what 1rem is
+  font-size: 62.5%; //* it's 10px divided by 16px (which is the default font size), 1rem = 10px
+
+  @include respond(tab-land) {
+    //* width < 1200?
+    font-size: 56.25%; //* 1rem = 9px; 9/16 = 56.25%
+  }
+  @include respond(tab-port) {
+    //* width < 900?
+    font-size: 50%; //* 1rem = 8px; 8/16 = 50%
+  }
+  @include respond(big-desktop) {
+    font-size: 75%; //* 1rem = 12px; 12/16 = 75%
+  }
 }
 
 body {
-  font-family: Lato, sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
-  color: #777;
-  padding: 3rem;
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
