--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,11 @@
 .section-about {
   background-color: $color-grey-light-1;
-  padding: 30rem 0;
-  margin-top: -20vh;
+  padding: 25rem 0;
+  margin-top: -10vh;
+
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -19,17 +23,29 @@
   & > * {
     transform: skewY(7deg);
   }
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .section-tours {
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
+
+  @include respond(tab-port) {
+    padding: 20rem 0 10rem 0;
+  }
 }
 
 .section-stories {
   position: relative;
   padding: 15rem 0;
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .section-book {
@@ -40,23 +56,27 @@
     $color-primary-dark
   );
 
-  .book {
-    background-image: linear-gradient(
-        105deg,
-        rgba($color-white, 0.9) 0%,
-        rgba($color-white, 0.9) 50%,
-        transparent 50%
-      ),
-      url(../img/nat-10.jpg);
-    background-size: 100%;
-    border-radius: $border-radius;
-    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
+}
 
-    height: 50rem;
+.book {
+  background-image: linear-gradient(
+      105deg,
+      rgba($color-white, 0.9) 0%,
+      rgba($color-white, 0.9) 50%,
+      transparent 50%
+    ),
+    url(../img/nat-10.jpg);
+  background-size: 100%;
+  border-radius: $border-radius;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
 
-    &__form {
-      width: 50%;
-      padding: 6rem;
-    }
+  height: 50rem;
+
+  &__form {
+    width: 50%;
+    padding: 6rem;
   }
 }
