--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -18,7 +18,7 @@
 0 - 600px     : phone
 600 - 900px   : tablet portrait
 900 - 1200px  : tablet landscape
-1200 - 1800px : our normal styles
+1200 - 1400px : medium desktop
 1800+         : big desktop
 
 $breakpoint argument choices:
@@ -47,6 +47,12 @@ ORDER: baser + typography > general layout + grid > page layout > components
   @if $breakpoint == tab-land {
     @media (max-width: 75em) {
       // 1200px
+      @content;
+    }
+  }
+  @if $breakpoint == medium-desktop {
+    @media (max-width: 87.5em) {
+      // 1600px
       @content;
     }
   }
