--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -59,6 +59,12 @@
   &__left {
     width: 33.333333%;
     display: table-cell;
+
+    @include respond(medium-desktop) {
+      display: block;
+      width: 100%;
+      overflow: hidden;
+    }
   }
 
   &__right {
@@ -66,11 +72,26 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(medium-desktop) {
+      display: block;
+      width: 100%;
+    }
   }
 
   &__img {
     display: block;
     width: 100%;
+
+    @include respond(medium-desktop) {
+      &--one {
+        width: 50.8%;
+        float: left;
+      }
+      &--two {
+        width: 49.2%;
+      }
+    }
   }
 
   &__text {
